[package]
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["encoding"]
description = "Implementation of Geological Survey of Japan algorithms."
documentation = "https://docs.rs/gsj"
edition = "2018"
keywords = ["gsj", "maptiles", "nishiokanagatsu2015", "dem", "dempng"]
license = "MIT"
name = "gsj"
readme = "README.md"
repository = "https://github.com/usagi/gsj"
version = "1.0.1"

[dependencies]
image = "0.23.9"
thiserror = "1.0.20"
